@@ -12,6 +12,8 @@ import org.springframework.ui.Model;
 import org.springframework.validation.Errors;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.ArrayList;
+import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -34,23 +36,13 @@ public class DesignTacoController {
     @ModelAttribute
     public void addIngredientsToModel(Model model) {
 
-        Iterable<Ingredient> ingredients = ingredientRepository.findAll();
-
-        //        List<Ingredient> ingredients = Arrays.asList(new Ingredient("FLTO", "Flour Tortilla", Type.WRAP),
-        //                                                     new Ingredient("COTO", "Corn Tortilla", Type.WRAP),
-        //                                                     new Ingredient("GRBF", "Ground Beef", Type.PROTEIN),
-        //                                                     new Ingredient("CARN", "Carnitas", Type.PROTEIN),
-        //                                                     new Ingredient("TMTO", "Diced Tomatoes", Type.VEGGIES),
-        //                                                     new Ingredient("LETC", "Lettuce", Type.VEGGIES),
-        //                                                     new Ingredient("CHED", "Cheddar", Type.CHEESE),
-        //                                                     new Ingredient("JACK", "Monterrey Jack", Type.CHEESE),
-        //                                                     new Ingredient("SLSA", "Salsa", Type.SAUCE),
-        //                                                     new Ingredient("SRCR", "Sour Cream", Type.SAUCE));
+        List<Ingredient> ingredients = new ArrayList<>();
+        ingredientRepository.findAll().forEach(ingredients::add);
 
         Type[] types = Ingredient.Type.values();
         for (Type type : types) {
-            model.addAttribute(type.toString()
-                                   .toLowerCase(), filterByType(ingredients, type));
+            model.addAttribute(type.toString().toLowerCase(),
+                               filterByType(ingredients, type));
         }
     }
 
@@ -93,20 +85,13 @@ public class DesignTacoController {
         return "redirect:/orders/current";
     }
 
-    private Iterable<Ingredient> filterByType(Iterable<Ingredient> ingredients,
+    private Iterable<Ingredient> filterByType(List<Ingredient> ingredients,
                                               Type type) {
 
-        return StreamSupport.stream(ingredients.spliterator(), false)
-                            .toList()
-                            .stream()
-                            .filter(x -> x.getType()
-                                          .equals(type))
-                            .collect(Collectors.toList());
-
-//        return ingredients.stream()
-//                          .filter(x -> x.getType()
-//                                        .equals(type))
-//                          .collect(Collectors.toList());
+        return ingredients.stream()
+                          .filter(x -> x.getType()
+                                        .equals(type))
+                          .collect(Collectors.toList());
     }
 
 }
